--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,25 +22,37 @@
         android:theme="@style/Theme.PseudoContactApp"
         tools:targetApi="31">
         <activity
-            android:name=".CallHistoryActivity"
+            android:name=".AboutUs"
             android:exported="false" />
         <activity
-            android:name=".CallLogActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ContactDetailActivity"
-            android:exported="false"
-            android:label="@string/title_activity_contact_detail"
-            android:theme="@style/Theme.PseudoContactApp" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.PseudoContactApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CallHistoryActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".CallLogActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ContactDetailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_contact_detail"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.PseudoContactApp" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".AddContactActivity"
             android:exported="false"
