Change Logo Color And Also Add Version Text View Change App Name.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,12 @@
         tools:targetApi="31">
         <activity
             android:name=".ManageGroupsActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".AboutUs"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SplashActivity"
             android:exported="true"
